--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article Preview</title>
+    <title>Kochbuch für Mama</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Articles</h1>
+        <h1>Rezepte</h1>
         <div id="articlesContainer"></div>
     </div>
     <script src="prev.js"></script>
