--- a/input.html
+++ b/input.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article Input</title>
+    <title>Kochbuch Input</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Article Input</h1>
+        <h1>Kochbuch Input</h1>
         <form id="articleForm">
             <label for="title">Title:</label><br>
             <input type="text" id="title" name="title" required><br>
