--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>Rezepte</h1>
         <div id="articlesContainer"></div>
+        <button onclick="window.location.href = 'input.html';">Mamarezepte hinzufügen</button>
     </div>
     <script src="prev.js"></script>
 </body>
